# cairo-coder

./: .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  LICENSE  MIGRATION_GUIDE.md  MIGRATION_TASK.md  README.md  README.old.md  SPEC.md  TAKOPI_SMITHERS.md  TASK_PRD.md  backend.dockerfile  backend.old.dockerfile  benchmark-results.html  bunfig.toml  design.md  docker-compose.dev.yml  docker-compose.prod-hosted.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  ingest.dockerfile  ingester.dockerfile  optimizer-issue.md  package.json  pnpm-lock.yaml  requirements.md  script-starklings.sh  turbo.json
.smithers/: agents.ts  config.ts  preload.ts  schemas.ts  workflow.db  workflow.db-shm  workflow.db-wal  workflow.tsx
.takopi-smithers/: autoheal-prompt.txt
.trunk/: .gitignore  actions  logs  notifications  out  tools  trunk.yaml
docs/: API.md  ARCHITECTURE.md  TESTING_SYSTEM.md
ingesters/: README.md  (+4 more)
python/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MAINTAINER_GUIDE.md  README.md  optimized_retrieval_program.json  pyproject.toml  qa_pairs.json  sample.config.toml
python/optimizers/datasets/: dojo_dataset.json  dojo_queries.json  generation_dataset.json  generation_dataset2.json  mcp_dataset.json  starklings_generation_dataset.json  user_queries.json
python/optimizers/datasets/cairo_programs/counter_contract/: Scarb.toml
python/optimizers/datasets/cairo_programs/counter_contract/src/: lib.cairo
python/optimizers/datasets/cairo_programs/debugging_values/: Scarb.toml
python/optimizers/datasets/cairo_programs/debugging_values/src/: lib.cairo
python/optimizers/datasets/cairo_programs/erc20_supply/: Scarb.toml
python/optimizers/datasets/cairo_programs/erc20_supply/src/: lib.cairo
python/optimizers/datasets/cairo_programs/erc721_nft/: Scarb.toml
python/optimizers/datasets/cairo_programs/erc721_nft/src/: lib.cairo
python/optimizers/datasets/cairo_programs/ownable_erc20/: Scarb.toml
python/optimizers/datasets/cairo_programs/ownable_erc20/src/: lib.cairo
python/optimizers/datasets/cairo_programs/pausable_erc20/: Scarb.toml
python/optimizers/datasets/cairo_programs/pausable_erc20/src/: lib.cairo
python/optimizers/datasets/cairo_programs/reentrancy_guard/: Scarb.toml
python/optimizers/datasets/cairo_programs/reentrancy_guard/src/: lib.cairo
python/optimizers/datasets/cairo_programs/rollback_component/: Scarb.toml
python/optimizers/datasets/cairo_programs/rollback_component/src/: lib.cairo
python/optimizers/results/: optimized_generation_cairo-coder.json  optimized_generation_dojo-agent.json  optimized_generation_starknet-agent.json  optimized_mcp_program.json  optimized_rag.json  optimized_rater.json  optimized_retrieval_program.json
python/scripts/: README_starklings_evaluation.md  starklings_evaluate.py
python/scripts/starklings_evaluation/: __init__.py  api_client.py  evaluator.py  models.py  report_generator.py
python/scripts/summarizer/: __init__.py  base_summarizer.py  cli.py  dpsy_summarizer.py  header_fixer.py  mdbook_summarizer.py  summarizer_factory.py
python/src/cairo_coder/: __init__.py
python/src/cairo_coder/agents/: __init__.py  registry.py
python/src/cairo_coder/api/: __init__.py
python/src/cairo_coder/config/: __init__.py  manager.py
python/src/cairo_coder/core/: __init__.py  agent_factory.py  config.py  constants.py  llm.py  rag_pipeline.py  types.py  vector_store.py
python/src/cairo_coder/datasets/: __init__.py
python/src/cairo_coder/db/: __init__.py  models.py  repository.py  session.py
python/src/cairo_coder/dspy/: __init__.py  context_summarizer.py  document_retriever.py  generation_program.py  grok_search.py  pgvector_rm.py  query_processor.py  retrieval_judge.py  suggestion_program.py  templates.py
python/src/cairo_coder/optimizers/: generation_optimizer.py  generation_optimizer_cairo-coder.py  generation_optimizer_dojo-agent.py  generation_optimizer_starknet-agent.py  mcp_optimizer.py  rag_pipeline_optimizer.py  retrieval_optimizer.py
python/src/cairo_coder/optimizers/__marimo__/session/: generation_optimizer.py.json
python/src/cairo_coder/optimizers/generation/: generate_starklings_dataset.py  optimize_generation.py  starklings_helper.py  utils.py
python/src/cairo_coder/server/: __init__.py  app.py  insights_api.py
python/src/cairo_coder/utils/: __init__.py  logging.py
python/src/cairo_coder_tools/: __init__.py
python/src/cairo_coder_tools/datasets/: __init__.py  analysis.py  extractors.py  migrate_langsmith.py
python/src/cairo_coder_tools/evals/: __init__.py
python/src/cairo_coder_tools/evals/starklings/: __init__.py  evaluator.py
python/src/cairo_coder_tools/ingestion/: __init__.py  base_summarizer.py  cli.py  crawler.py  dpsy_summarizer.py  web_targets.py
python/src/scripts/: README.md  README_starklings_evaluation.md  __init__.py  cairocoder_trace_extraction.py  dataset.py  docs_crawler.py  eval.py  export_langsmith_human_queries.py  filter_2025_blogs.py  ingest.py  llm_dataset_analysis.py  starklings_evaluate.py  starknet_agent_trace_extraction.py
python/src/scripts/datasets/: cli.py
python/src/scripts/starklings_evaluation/: api_client.py  report_generator.py
python/src/scripts/summarizer/: doc_dump_summarizer.py  dpsy_summarizer.py  summarizer_factory.py
python/tests/: __init__.py  conftest.py
python/tests/fixtures/: __init__.py  rag_pipeline.py
python/tests/integration/: __init__.py  conftest.py  test_config_integration.py  test_insights_api.py  test_llm_integration.py  test_server_integration.py  test_skills_integration.py  test_vector_store_integration.py
python/tests/unit/: __init__.py  test_agent_factory.py  test_config.py  test_core_types.py  test_document_retriever.py  test_expand_skill_documents.py  test_generation_program.py  test_grok_integration.py  test_llm.py  test_migrate_langsmith.py  test_openai_server.py  test_optimizers_loading.py  test_query_processor.py  test_rag_pipeline.py  test_retrieval_judge.py  test_server.py  test_server_utils.py  test_vector_store.py
python/tests/unit/db/: test_repository.py
(+100 files in other folders)
