[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "cairo-coder"
version = "0.3.1"
description = "Cairo language code generation service using DSPy RAG"
authors = [{ name = "Kasar Labs", email = "admin@kasarlabs.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Code Generators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "aiohttp>=3.9.0",
  "anthropic>=0.39.0",
  "asyncpg>=0.30.0",
  "beautifulsoup4>=4.12.0",
  "dspy>=3.0.3",
  "fastapi>=0.115.0",
  "google-generativeai>=0.8.0",
  "httpx>=0.27.0",
  "jsonlines>=4.0.0",
  "langsmith>=0.4.6",
  "lxml>=4.9.0",
  "marimo>=0.16.0",
  "markdownify>=0.11.0",
  "mlflow>=2.20",
  "numpy>=1.24.0",
  "openai>=1.0.0",
  "pgvector>=0.4.1",
  "prometheus-client>=0.20.0",
  "psycopg2-binary>=2.9.10",
  "psycopg2>=2.9.10",
  "pydantic-settings>=2.0.0",
  "pydantic>=2.0.0",
  "pyinstrument>=5.1.1",
  "pytest-asyncio>=1.0.0",
  "pytest>=8.4.1",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.6",
  "structlog>=24.0.0",
  "tenacity>=8.0.0",
  "toml>=0.10.2",
  "tqdm>=4.66.0",
  "typer>=0.19.2",
  "xai_sdk>=1.3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-benchmark>=4.0.0",
  "pytest-mock>=3.0.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
  "mypy>=1.0.0",
  "types-toml>=0.10.0",
  "pre-commit>=3.0.0",
  "testcontainers[postgres]>=4.0.0",
  "nest-asyncio>=1.6.0",
]

[project.scripts]
# Main server
cairo-coder = "cairo_coder.server.app:main"
cairo-coder-api = "cairo_coder.api.server:run"

# Optimization tools
generate_starklings_dataset = "cairo_coder.optimizers.generation.generate_starklings_dataset:cli_main"
optimize_generation = "cairo_coder.optimizers.generation.optimize_generation:main"

# Other scripts
eval = "scripts.eval:main"
ingest = "scripts.ingest:app"
dataset = "scripts.dataset:app"

[project.urls]
"Homepage" = "https://github.com/cairo-coder/cairo-coder"
"Bug Tracker" = "https://github.com/cairo-coder/cairo-coder/issues"

[tool.uv.build-backend]
module-root = "src"
module-name = ["cairo_coder", "cairo_coder_tools", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-include = ["*.pyi?"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes errors
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T20", # flake8-print
  "SIM", # flake8-simplify
  "RET", # flake8-return
]
ignore = [
  "E501",  # line too long (handled by black)
  "B008",  # do not perform function calls in argument defaults
  "T201",  # print statements (we use structlog)
  "N803",  # Argument lowercase
  "UP045", # Use X | None instead of Optional[X]
]
[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
  "db: marks tests that require a database (run by default, use -m 'not db' to skip)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/cairo_coder"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[dependency-groups]
dev = ["nest-asyncio>=1.6.0", "ty>=0.0.1a15"]
